# scrape

./: .gitignore  LICENSE  README.md  pyproject.toml
scrape/: ascrape.py
tests/: test_tf_idf.py
