[tool.poetry]
name = "scrape"
version = "0.1.0"
description = ""
authors = ["Zuhra27 <ujkanoviczuhra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nox = "^2020.12.31"
flake8 = "^3.8.4"
sklearn = "^0.0"
pandas = "^1.2.3"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
nox = "^2020.8.22"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
